# player

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: tauri-cli.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  service.rs  var_cards.rs  workspace.rs
src/components/: ProtocolNavigatorRail.vue
src/components/var-cards/: VarCardAssetField.vue  VarCardGallery.vue  VarCardGalleryItem.vue  VarCardPreviewDialog.vue  VarCardPreviewSurface.vue  VarCardServiceField.vue
src/components/var-cards/studio/: VarCardFormPanel.vue  VarCardLivePreviewPanel.vue
src/composables/: useMonaco.ts  useProtocolNavigator.ts  useProtocolStepLiveActivity.ts  useVarCardRecorder.ts
src/features/services/: api.ts
src/features/var-cards/: api.ts  builtin.ts  types.ts
src/features/var-cards/runtime/: compileCardManifest.ts  createEditorVarTypePresets.ts  createRecorderTypePlugins.ts  createVarCardRuntime.ts
src/locales/: en.json  zh.json
src/pages/: EditorPage.vue  ProjectListPage.vue  ProtocolView.vue  VarCardMarketPage.vue  VarCardStudioPage.vue  WelcomePage.vue
src/shared/domain/protocol/: liveActivity.ts
src/shared/domain/var-cards/: catalog.ts
src/shared/domain/workspace/: filterProtocols.ts  projectTypes.ts  workspaceTypes.ts
src/shared/platform/: liveActivityGateway.ts  projectGateway.ts  protocolFileGateway.ts  services.ts  var-cards.ts  workspaceGateway.ts
src/stores/: project.ts  varCards.ts  workspace.ts
src/utils/: workspacePaths.ts
(+7 files in other folders)
